--- a/app/src/main/res/layout/view_photo_post.xml
+++ b/app/src/main/res/layout/view_photo_post.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -48,5 +48,5 @@
                 android:gravity="end"
                 tools:text="02/01/2018 11:51" />
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </FrameLayout>
